--- a/public/results.html
+++ b/public/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CruiseControl - Results</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="tailwind.css" rel="stylesheet">
 </head>
 <body class="min-h-screen bg-slate-900 text-slate-100">
     <div class="container mx-auto px-4 py-8">
