--- a/public/progress.html
+++ b/public/progress.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CruiseControl - Progress</title>
-    <link href="tailwind.css" rel="stylesheet">
+    <link href="/tailwind.css" rel="stylesheet">
 </head>
 <body class="min-h-screen bg-slate-900 text-slate-100">
     <div class="container mx-auto px-4 py-8">
